--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
   gsheets: ^0.5.0
-
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
